added detail page

--- a/list.html
+++ b/list.html
@@ -1,72 +1,72 @@
 <article class="list">
+  <a class="item ajax" href="detail.html">
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>      
+  </a>
   <div class="item">
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>      
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>      
   </div>
   <div class="item">
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>      
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>      
   </div>
   <div class="item">
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>      
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>      
   </div>
   <div class="item">
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>      
-  </div>
-  <div class="item">
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>
-      <span>
-        Lorem
-      </span>      
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>
+    <span>
+      Lorem
+    </span>      
   </div>
 </article>
