--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
       </article>
     </section>
     <footer>
-      Lorem
+      <ul>
+        <li>lorem</li>
+        <li>lorem</li>
+      </ul>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
