--- a/detail.html
+++ b/detail.html
@@ -11,16 +11,16 @@
     </li>
     <li>
       Perunoita
-      <span>Osta</span>
+      <span class="buy">Osta</span>
     </li>
     <li>
       Persiljaa
-      <span>Osta</span>
+      <span class="buy">Osta</span>
       <span class="luomu">Luomu</span>
     </li>
     <li>
       Porkkanoita
-      <span>Osta</span>
+      <span class="buy target">Osta</span>
       <span class="luomu">Luomu</span>
     </li>
     <li>
