--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta name="theme-color" content="#08AE9E">
     <link rel="stylesheet" href="styles.css">
+    <title>Green Rescue</title>
   </head>
   <body>
     <header>
@@ -16,7 +17,7 @@
     </a>
     </header>
     <section class="main">
-      <article>
+      <article class="search">
         <p>
           Aseta tuotefiltteri
         </p>
@@ -54,9 +55,15 @@
     </section>
     <footer>
       <ul>
-        <li>lorem</li>
-        <li>lorem</li>
+        <li>Yhteystiedot</li>
+        <li>Muut tiedot</li>
+        <li>Lisää tietoa</li>
       </ul>
+      <ul>
+        <li>Kirjautuminen</li>
+        <li>Haku</li>
+        <li>Asetukset</li>
+      </ul>      
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
