--- a/list.html
+++ b/list.html
@@ -1,72 +1,76 @@
 <article class="list">
   <a class="item ajax" href="detail.html">
     <span>
-      Lorem
+      Persiljaa 10€ / kg
     </span>
     <span>
-      Lorem
+      Porvoonkatu 8 Helsinki
     </span>
     <span>
-      Lorem
+      1.5 km
+      <span class="luomu">Luomu</span>
     </span>
     <span>
-      Lorem
-    </span>      
+      Helsingin heinähattu Oy
+    </span>
   </a>
   <div class="item">
     <span>
-      Lorem
+      Perunoita 1€ / kg
     </span>
     <span>
-      Lorem
+      Porvoonkatu 8 Helsinki
     </span>
     <span>
-      Lorem
+      1.5 km
     </span>
     <span>
-      Lorem
+      Helsingin heinähattu Oy
     </span>      
   </div>
   <div class="item">
     <span>
-      Lorem
+      Porkkanoita 2€ / kg
     </span>
     <span>
-      Lorem
+      Porvoonkatu 8 Helsinki
     </span>
     <span>
-      Lorem
+      1.5 km
+      <span class="luomu">Luomu</span>
     </span>
     <span>
-      Lorem
-    </span>      
+      Helsingin heinähattu Oy
+    </span>     
   </div>
   <div class="item">
     <span>
-      Lorem
+      Kurkkuja 3 € / kg
     </span>
     <span>
-      Lorem
+      Kasvikuja 345 Helsinki
     </span>
     <span>
-      Lorem
+      3.5 km
+      <span class="luomu">Luomu</span>
     </span>
     <span>
-      Lorem
-    </span>      
+      Kierot kasvit Ky
+    </span>
   </div>
   <div class="item">
     <span>
-      Lorem
+      Perunoita 1.5 € / kg
     </span>
     <span>
-      Lorem
+      Kasvikuja 345 Helsinki
     </span>
     <span>
-      Lorem
+      3.5 km
+      <span class="luomu">Luomu</span>
     </span>
     <span>
-      Lorem
-    </span>      
+      Kierot kasvit Ky
+    </span>   
   </div>
 </article>
